--- a/PAGES/6f_pipes/index.html
+++ b/PAGES/6f_pipes/index.html
@@ -2051,8 +2051,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We introduce two approaches for computing outputs that involve multiple intermediate steps. First, we introduce the so-called   <span style="color: rgb(62, 121, 180);"><strong> let blocks</strong></span>, which create a new scope and return the last line as the output. Let blocks can be deemed a simplified way to write and execute a function. They are particularly helpful to keep the namespace clean, as all the variables in a let scope are local and therefore inaccessible outside it. </p>
-<p>The second approach is based on   <span style="color: rgb(62, 121, 180);"><strong> pipes</strong></span>, which chain together a series of operations and provide the final output as their result. As the built-in implementation of pipes can become verbose beyond a single-argument function, we also present an alternative implementation from the <code>Pipe</code> package.</p>
+<p>We introduce two approaches for computing outputs that involve multiple intermediate steps. First, we introduce the so-called <span style="color: rgb(62, 121, 180);"><strong> let blocks</strong></span>, which create a new scope and return the last line as the output. Let blocks can be deemed a simplified way to write and execute a function. They are particularly helpful to keep the namespace clean, as all the variables in a let scope are local and therefore inaccessible outside it. </p>
+<p>The second approach is based on <span style="color: rgb(62, 121, 180);"><strong> pipes</strong></span>, which chain together a series of operations and provide the final output as their result. As the built-in implementation of pipes can become verbose beyond a single-argument function, we also present an alternative implementation from the <code>Pipe</code> package.</p>
 <p>      </div>
     </div>
   </div>
@@ -2092,7 +2092,7 @@ output &#61; let b &#61; a         # &#39;b&#39; is a local variable having the 
    temp2 &#61; exp&#40;temp1&#41;
    round&#40;temp2&#41;
 end</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>output</code> <br/> <pre><code class="plaintext code-output">1.0</code></pre> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>temp1</code> #same for <code>temp2</code><br/><div class="akin_to_pre">ERROR: UndefVarError: `temp1` not defined</div> </div></div> </div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>output</code> <br/> <pre><code class="plaintext code-output">1.0</code></pre> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>temp1</code> #same for <code>temp2</code><br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: UndefVarError: `temp1` not defined</div> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
 
@@ -2101,7 +2101,7 @@ output &#61; let a &#61; a         # the &#39;a&#39; on the left refers to the l
    temp2 &#61; exp&#40;temp1&#41;
    round&#40;temp2&#41;
 end</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>output</code> <br/> <pre><code class="plaintext code-output">1.0</code></pre> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>temp1</code> #same for <code>temp2</code><br/><div class="akin_to_pre">ERROR: UndefVarError: `temp1` not defined</div> </div></div> </div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>output</code> <br/> <pre><code class="plaintext code-output">1.0</code></pre> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>temp1</code> #same for <code>temp2</code><br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: UndefVarError: `temp1` not defined</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
