--- a/PAGES/3c_arrays/index.html
+++ b/PAGES/3c_arrays/index.html
@@ -2051,7 +2051,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>So far, we&#39;ve explored numeric and string variables, which can be interpreted as single-element objects. Now, we&#39;ll shift our focus to   <span style="color: rgb(62, 121, 180);"><strong> collections</strong></span>, defined as <strong> variables comprising multiple elements</strong>.</p>
+<p>So far, we&#39;ve explored numeric and string variables, which can be interpreted as single-element objects. Now, we&#39;ll shift our focus to <span style="color: rgb(62, 121, 180);"><strong> collections</strong></span>, defined as <strong> variables comprising multiple elements</strong>.</p>
 <p>Julia provides several forms of collections, including:</p>
 <ul>
 <li><p>Arrays &#40;including vectors and matrices&#41;</p>
@@ -2063,8 +2063,8 @@ color: white;
 <li><p>Sets</p>
 </li>
 </ul>
-<p>  <span style="color: rgb(62, 121, 180);"><strong> Arrays</strong></span> represent one of the most common data structure for collections. They are formally defined as objects with type <code>Array&#123;T,d&#125;</code>, where <code>d</code> is the array&#39;s dimension and <code>T</code> is its elements&#39; type &#40;e.g., <code>Int64</code> or <code>Float64</code>&#41;.</p>
-<p>Two special types of arrays are   <span style="color: rgb(62, 121, 180);"><strong> vectors</strong></span> &#40;1-dimensional arrays&#41; and   <span style="color: rgb(62, 121, 180);"><strong> matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. Although we include a section about matrices, this is optional—our content concentrates almost exclusively on vectors, which are sufficient for explaining Julia&#39;s fundamentals.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong> Arrays</strong></span> represent one of the most common data structure for collections. They are formally defined as objects with type <code>Array&#123;T,d&#125;</code>, where <code>d</code> is the array&#39;s dimension and <code>T</code> is its elements&#39; type &#40;e.g., <code>Int64</code> or <code>Float64</code>&#41;.</p>
+<p>Two special types of arrays are <span style="color: rgb(62, 121, 180);"><strong> vectors</strong></span> &#40;1-dimensional arrays&#41; and <span style="color: rgb(62, 121, 180);"><strong> matrices</strong></span> &#40;2-dimensional arrays&#41;. Specifically, the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. Although we include a section about matrices, this is optional—our content concentrates almost exclusively on vectors, which are sufficient for explaining Julia&#39;s fundamentals.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content> <strong> Julia uses 1 as an array's first index</strong>. This contrasts with many other languages &#40;e.g., Python&#41;, where 0 is used as the first index.  </div>  </div>
@@ -2103,7 +2103,7 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</
 <pre><code class="language-julia">x &#61; &#91;4, 5, 6, 7, 8&#93;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;&#91;1,3&#93;&#93;</code> # elements of &#39;x&#39; with indices 1 and 3<br/><div class="akin_to_pre">2-element Vector{Int64}:
  4
- 6</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;1,3&#93;</code> # be careful&#33; this is the notation used for matrices, indicating &#39;x&#91;row 1, column 3&#93;&#39;<br/><div class="akin_to_pre">ERROR: BoundsError: attempt to access 5-element Vector{Int64} at index [1, 3]</div> </div></div> </div>   </details></div>
+ 6</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;1,3&#93;</code> # be careful&#33; this is the notation used for matrices, indicating &#39;x&#91;row 1, column 3&#93;&#39;<br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: BoundsError: attempt to access 5-element Vector{Int64} at index [1, 3]</div> </div></div> </div>   </details></div>
 <p>The second approach is by establishing the indices through a <strong> range</strong>. Ranges are denoted as <code>&lt;first&gt;:&lt;steps&gt;:&lt;last&gt;</code>, with Julia assuming increments of one if we omit <code>&lt;steps&gt;</code>. The first and last index in a range can be expressed respectively through the keywords <code>begin</code> and <code>end</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;4, 5, 6, 7, 8&#93;</code></pre>
