--- a/PAGES/4d_vectorizing/index.html
+++ b/PAGES/4d_vectorizing/index.html
@@ -2052,7 +2052,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>Programming languages have multiple approaches for transforming collections of objects. These methods are useful when, for instance, we aim to compute all the squared elements of <code>x&#61;&#91;2,3,4&#93;</code>.</p>
-<p>In this section, we explore one way to execute these transformations:   <span style="color: rgb(62, 121, 180);"><strong> broadcasting</strong></span>, also known as   <span style="color: rgb(62, 121, 180);"><strong> vectorization</strong></span>. This allows the user to element-wise apply <strong> functions</strong> and <strong> operators</strong> to iterable collections such as vectors, tuples, and ranges. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Formally, iterable collections refer to collections whose elements can be accessed sequentially.  </span></span> Unlike other methods, broadcasting makes it possible to perform these operations through a simple syntax.</p>
+<p>In this section, we explore one way to execute these transformations: <span style="color: rgb(62, 121, 180);"><strong> broadcasting</strong></span>, also known as <span style="color: rgb(62, 121, 180);"><strong> vectorization</strong></span>. This allows the user to element-wise apply <strong> functions</strong> and <strong> operators</strong> to iterable collections such as vectors, tuples, and ranges. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Formally, iterable collections refer to collections whose elements can be accessed sequentially.  </span></span> Unlike other methods, broadcasting makes it possible to perform these operations through a simple syntax.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content>     The terms <strong> broadcasting</strong> and <strong> vectorization</strong> will be used interchangeably on this website. Strictly speaking, vectorization is restricted to applications with arrays of the same size, while broadcasting is an extension allowing for scalars.  </div>  </div>
@@ -2161,7 +2161,7 @@ z &#61; map&#40;&#43;, x, y&#41;        # recall that &#96;&#43;&#96; is both an
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Broadcasting Functions</h2></p>
-<p>  <span style="color: rgb(62, 121, 180);"><strong> Function broadcasting</strong></span> plays a similar role as <code>map</code>, allowing the user to apply a function element-wise. The operation requires appending a dot <strong>  <em> after</em></strong> the name of the function. For example, <code>log.&#40;x&#41;</code> applies <code>log</code> to each element of a vector <code>x</code>. </p>
+<p><span style="color: rgb(62, 121, 180);"><strong> Function broadcasting</strong></span> plays a similar role as <code>map</code>, allowing the user to apply a function element-wise. The operation requires appending a dot <strong>  <em> after</em></strong> the name of the function. For example, <code>log.&#40;x&#41;</code> applies <code>log</code> to each element of a vector <code>x</code>. </p>
 <p>Remarkably, <strong> any function</strong> <code>f</code> <strong> has a vectorized version</strong> <code>f.</code>, regardless of whether function is defined by the user or a third party.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2252,7 +2252,7 @@ region        &#61;  &#91;&quot;South America&quot;, &quot;North America&quot;&#
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Broadcasting Operators</h2></p>
-<p>It&#39;s also possible to   <span style="color: rgb(62, 121, 180);"><strong> broadcast operators</strong></span>, making the operator apply element-wise. Its use requires prepending a dot <strong>  <em> before</em></strong> the operator. </p>
+<p>It&#39;s also possible to <span style="color: rgb(62, 121, 180);"><strong> broadcast operators</strong></span>, making the operator apply element-wise. Its use requires prepending a dot <strong>  <em> before</em></strong> the operator. </p>
 <p>In this respect, it&#39;s helpful to recall the classification of operators based on the number of operands, along with their corresponding syntax. Specifically, the syntax of  <em> unary operators</em> is <code>&lt;symbol&gt;x</code>, so that <code>.√x</code> broadcasts <code>√</code>. Likewise, the syntax for  <em> binary operators</em> is <code>x &lt;symbol&gt; y</code>, such that <code>x .&#43; y</code> computes the element-wise sum of vectors <code>x</code> and <code>y</code>, resulting in <code>&#91;x&#91;1&#93;&#43;y&#91;1&#93;, x&#91;2&#93;&#43;y&#91;2&#93;, ...&#93;</code>. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2430,7 +2430,7 @@ x &#61; &#91;1, 2, 3&#93;</code></pre>
 <pre><code class="language-julia">x    &#61; &#91;1, 2&#93;
 list &#61; &#91;1, 2, 3&#93;</code></pre>
 <p></div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>in.&#40;x, list&#41;</code><br/><div class="akin_to_pre">ERROR: DimensionMismatch: arrays could not be broadcast to a common size; got a dimension with lengths 2 and 3</div> </div></div> </div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>in.&#40;x, list&#41;</code><br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: DimensionMismatch: arrays could not be broadcast to a common size; got a dimension with lengths 2 and 3</div> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x    &#61; &#91;1, 2, 4&#93;
@@ -2520,7 +2520,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Currying and Fixing Arguments (<strong><i>OPTIONAL</i></strong>)</h2></p>
-<p>  <span style="color: rgb(62, 121, 180);"><strong> Currying</strong></span> is a technique that transforms the evaluation of a function with multiple arguments, turning it into the evaluation of a sequence of functions, each with a single argument. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The name comes from the mathematician Haskell Curry, not the spice.  </span></span> For instance, the curried version of <code>f&#40;x,y&#41;</code> provides an identical result and is written <code>f&#40;x&#41;&#40;y&#41;</code>.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong> Currying</strong></span> is a technique that transforms the evaluation of a function with multiple arguments, turning it into the evaluation of a sequence of functions, each with a single argument. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The name comes from the mathematician Haskell Curry, not the spice.  </span></span> For instance, the curried version of <code>f&#40;x,y&#41;</code> provides an identical result and is written <code>f&#40;x&#41;&#40;y&#41;</code>.</p>
 <p>Our interest in currying lies in its ability to simplify broadcasting: it enables treating an argument as a single object, without the need to use vectors/tuples or <code>Ref</code>. The technique could seem confusing for new users. In particular, it requires a good understanding of functions as first-class objects, which allows functions to be treated as variables themselves. My primary goal is that you can at least recognize the syntax of currying, and thus be able to read code that applies it.</p>
 <p>We start by illustrating how currying can be applied in general.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
