--- a/PAGES/5c_forLoops/index.html
+++ b/PAGES/5c_forLoops/index.html
@@ -2051,7 +2051,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>A key feature of programming is its ability to automate repetitive tasks. One way to implement this is through   <span style="color: rgb(62, 121, 180);"><strong> for-loops</strong></span>, which run the same code block on each element of a list.</p>
+<p>A key feature of programming is its ability to automate repetitive tasks. One way to implement this is through <span style="color: rgb(62, 121, 180);"><strong> for-loops</strong></span>, which run the same code block on each element of a list.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"><strong> Always Wrap For-Loops in Functions</strong>  </span>  </div>  <div class=content>     At this stage of the website, where we&#39;re still introducing fundamental concepts, subjects are presented as simple as possible. The presentation of for-loops in particular are written in the global scope to simplify the presentation. </p>
 <p>However, <strong> you should always wrap for-loops in functions</strong>. Executing for-loops outside a function severely degrade performance and are subject to different rules regarding variable scoping. In fact, older versions of Julia didn&#39;t allow certain operations involving for-loops in the global scope.  </div>  </div>
@@ -2071,7 +2071,7 @@ end</code></pre>
 </li>
 </ul>
 <ul>
-<li><p><strong> A list of elements</strong>: this is <code>&#91;&quot;hello&quot;,&quot;beautiful&quot;,&quot;world&quot;&#93;</code> in the example, and represents the elements over which we&#39;ll apply the code block. The list can consist of elements having any data type &#40;e.g., strings, numbers, and even functions&#41;. The only restriction is that it has to be   <span style="color: rgb(62, 121, 180);"><strong> iterable object</strong></span>, defined as a container allowing the user to access each element individually. Examples of iterable objects are vectors &#40;as in the example&#41;, but they&#39;re not the only option. One important iterable object that we&#39;ll explore is ranges, which specify vector indices.</p>
+<li><p><strong> A list of elements</strong>: this is <code>&#91;&quot;hello&quot;,&quot;beautiful&quot;,&quot;world&quot;&#93;</code> in the example, and represents the elements over which we&#39;ll apply the code block. The list can consist of elements having any data type &#40;e.g., strings, numbers, and even functions&#41;. The only restriction is that it has to be <span style="color: rgb(62, 121, 180);"><strong> iterable object</strong></span>, defined as a container allowing the user to access each element individually. Examples of iterable objects are vectors &#40;as in the example&#41;, but they&#39;re not the only option. One important iterable object that we&#39;ll explore is ranges, which specify vector indices.</p>
 </li>
 </ul>
 <ul>
@@ -2128,7 +2128,7 @@ end</code></pre>
 <p>All the examples considered so far have used <code>&#91;&quot;hello&quot;, &quot;beautiful&quot;, &quot;world&quot;&#93;</code> as the list to iterate over. Although useful for demonstration purposes, constructing lists by specifying each element individually can be impractical when working with larger or more complex data sets. Furthermore, the method is unsuitable for building sequences. </p>
 <p>Now, we will delve into different strategies to tackle this issue. When it comes to for-loops, defining in particular sequences is essential to <strong> iterate over vector indices</strong>.</p>
  <h4> Ranges </h4>
-<p>One common technique for generating a sequence of values is through   <span style="color: rgb(62, 121, 180);"><strong> ranges</strong></span>. The syntax for defining a range is <code>&lt;begin&gt;:&lt;steps&gt;:&lt;end&gt;</code>, where <code>&lt;begin&gt;</code> and <code>&lt;end&gt;</code> respectively refer to the first and last index. The term <code>&lt;steps&gt;</code> refers to the increments between two consecutive values, with negative values reversing the range order. Moreover, if you write <code>&lt;begin&gt;:&lt;end&gt;</code> and thus omit <code>&lt;steps&gt;</code>, Julia assumes steps equal to one.</p>
+<p>One common technique for generating a sequence of values is through <span style="color: rgb(62, 121, 180);"><strong> ranges</strong></span>. The syntax for defining a range is <code>&lt;begin&gt;:&lt;steps&gt;:&lt;end&gt;</code>, where <code>&lt;begin&gt;</code> and <code>&lt;end&gt;</code> respectively refer to the first and last index. The term <code>&lt;steps&gt;</code> refers to the increments between two consecutive values, with negative values reversing the range order. Moreover, if you write <code>&lt;begin&gt;:&lt;end&gt;</code> and thus omit <code>&lt;steps&gt;</code>, Julia assumes steps equal to one.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2302,7 +2302,7 @@ for word in &#91;&quot;hello&quot;&#93;
     x &#61; word                # &#96;x&#96; is local to the for-loop, not available outside it
 end</code></pre>
 <p></div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code><br/><div class="akin_to_pre">ERROR: UndefVarError: x not defined</div> </div></div> </div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code><br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: UndefVarError: x not defined</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>Next, we show the consequences of variable scope for global variables. They&#39;re summarized by the last rule we mentioned above.</p>
@@ -2343,7 +2343,7 @@ end</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Array Comprehensions</h2></p>
-<p>The previous section showed that we can define an array by following a two-step procedure: initializing an array, and then setting its values through a for-loop. However, performing two operations is inconvenient and verbose. An alternative is provided by   <span style="color: rgb(62, 121, 180);"><strong> array comprehensions</strong></span>, which makes it possible <strong> to create arrays through for-loops</strong> with a more concise syntax:<code>&#91;&lt;expression&gt; for... if...&#93;</code>, where <code>&lt;expression&gt;</code> can be an operation or a function. </p>
+<p>The previous section showed that we can define an array by following a two-step procedure: initializing an array, and then setting its values through a for-loop. However, performing two operations is inconvenient and verbose. An alternative is provided by <span style="color: rgb(62, 121, 180);"><strong> array comprehensions</strong></span>, which makes it possible <strong> to create arrays through for-loops</strong> with a more concise syntax:<code>&#91;&lt;expression&gt; for... if...&#93;</code>, where <code>&lt;expression&gt;</code> can be an operation or a function. </p>
 <p>To illustrate its use, consider a vector <code>x</code>. Moreover, the goal is to create a vector <code>y</code>, with each element in <code>y</code> is the square of the corresponding element in <code>x</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> This example only aims at explaining the syntax of array comprehensions—<code>y</code> could be simply created by <code>y &#61; x .* x</code> or <code>y &#61; x .^ 2</code>.  </span></span> The following examples show two approaches to creating <code>y</code> using array comprehensions. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2495,7 +2495,7 @@ y &#61; &#91;index * value for &#40;index,value&#41; in enumerate&#40;x&#41;&#93
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Iterating over Functions</h2><a id="iterate_functions" class="anchor"></a></p>
-<p>Functions in Julia are   <span style="color: rgb(62, 121, 180);"><strong> first-class objects</strong></span>. This means that they can be manipulated in a similar way as other primitive objects, such as strings and numbers. In particular, we can define a vector of functions and iterate over them. The next example illustrates this, by providing descriptive statics of a vector <code>x</code>.</p>
+<p>Functions in Julia are <span style="color: rgb(62, 121, 180);"><strong> first-class objects</strong></span>. This means that they can be manipulated in a similar way as other primitive objects, such as strings and numbers. In particular, we can define a vector of functions and iterate over them. The next example illustrates this, by providing descriptive statics of a vector <code>x</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">using Statistics    # to get access to the function &#96;mean&#96; and &#96;median&#96;
 
